fix: update list collection method and improve comment clarity in ExtractionResource